[workspace]
members = [ "problems/basic_calculator", "problems/best_time_to_buy_and_sell_stock", "problems/contains_duplicate", "problems/count_odd_numbers_in_an_interval_range","problems/count_partitions_with_max_min_difference_at_most_k", "problems/count_special_triplets", "problems/count_square_sum_triples", "problems/maximum_running_time_of_n_computers",
    "rust-by-example/constants",
    "rust-by-example/enums",
    "rust-by-example/ferris_says",
    "rust-by-example/first-application",
    "rust-by-example/hello-world", "rust-in-action/ch3/filebasics", "rust-in-action/ch3/fileresult", "rust-in-action/ch7/ch7-fview", "rust-in-action/ch7/ch7-fview-str", "rust-in-action/ch7/ch7-serde-eg",
]
