[workspace]
members = ["problems/apple_redistribution_into_boxes",
    "problems/basic_calculator",
    "problems/best_time_to_buy_and_sell_stock",
    "problems/best_time_to_buy_and_sell_stock_using_strategy",
    "problems/best_time_to_buy_and_sell_stock_v",
    "problems/contains_duplicate",
    "problems/count_covered_buildings",
    "problems/count_mentions_per_user",
    "problems/count_odd_numbers_in_an_interval_range",
    "problems/count_partitions_with_even_sum_difference",
    "problems/count_partitions_with_max_min_difference_at_most_k",
    "problems/count_special_triplets",
    "problems/count_square_sum_triples",
    "problems/count_the_number_of_computer_unlocking_permutations",
    "problems/coupon_code_validator",
    "problems/course_schedule", "problems/four_divisors", "problems/last_day_where_you_can_still_cross", "problems/last_day_where_you_can_still_cross_reverse_dsu",
    "problems/longest_consecutive_sequence",
    "problems/longest_substring_without_repeating_characters",
    "problems/maximize_happiness_of_selected_children",
    "problems/maximum_running_time_of_n_computers",
    "problems/merge_strings_alternately", "problems/minimum_penalty_for_a_shop", "problems/n_repeated_element_in_size_2n_array", "problems/plus_one", "problems/pyramid_transition_matrix",
    "problems/two_sum",
    "rust-by-example/constants",
    "rust-by-example/enums",
    "rust-by-example/ferris_says",
    "rust-by-example/first-application",
    "rust-by-example/hello-world",
    "rust-in-action/ch3/filebasics",
    "rust-in-action/ch3/fileresult",
    "rust-in-action/ch7/ch7-fview",
    "rust-in-action/ch7/ch7-fview-str",
    "rust-in-action/ch7/ch7-serde-eg",
]
